--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
             border: 2px solid #7e22ce;
             transition: all 0.4s ease;
             cursor: pointer;
-            min-height: 280px;
+            min-height: 300px;
             padding: 15px;
             display: inline-flex;
             flex-direction: column;
@@ -174,9 +174,10 @@
         }
         .course-card p {
             color: #4b5563;
-            font-size: 0.85rem;
-            line-height: 1.5;
+            font-size: 0.9rem;
+            line-height: 1.6;
             flex-grow: 1;
+            margin-bottom: 12px;
         }
         .course-card a {
             color: #7e22ce;
@@ -295,13 +296,13 @@
         @media (max-width: 768px) {
             .course-card {
                 width: 180px;
-                min-height: 260px;
+                min-height: 280px;
             }
             .course-card h3 {
                 font-size: 1.1rem;
             }
             .course-card p {
-                font-size: 0.8rem;
+                font-size: 0.85rem;
             }
             .course-card a {
                 font-size: 0.85rem;
@@ -310,13 +311,13 @@
         @media (max-width: 480px) {
             .course-card {
                 width: 160px;
-                min-height: 240px;
+                min-height: 260px;
             }
             .course-card h3 {
                 font-size: 1rem;
             }
             .course-card p {
-                font-size: 0.75rem;
+                font-size: 0.8rem;
             }
             .course-card a {
                 font-size: 0.8rem;
