--- a/index.html
+++ b/index.html
@@ -438,7 +438,7 @@
         <div class="container mx-auto px-6 text-center">
             <h2 class="text-4xl font-extrabold text-blue-800 mb-8">ثبت‌نام دوره‌های جدید آغاز شد!</h2>
             <video height="160" controls>
-                <source src="https://persian21.cdn.asset.aparat.com/aparat-video/ab75685d2a375a34a68f4fac0aa13d5666409867-360p.mp4?wmsAuthSign=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ0b2tlbiI6IjJhNjA5M2I0YWMxYjFmNzg0MGVhMzk4NGE1OThiZTgzIiwiZXhwIjoxNzU5MTg1ODQ0LCJpc3MiOiJTYWJhIElkZWEgR1NJRyJ9.agL2cGOT5oa95100p-5uCD01NECx1eQIaiWQmrKGWjE" type="video/mp4">
+                <source src="https://static.cdn.asset.aparat.com/avt/66409867_15s.mp4" typeWjE="video/mp4">
                 مرورگرت از ویدئو پشتیبانی نمی‌کنه. لطفاً از یوتیوب استفاده کن: <a href="https://www.youtube.com/embed/SAMPLE_ID">لینک یوتیوب</a>
             </video>
             <p class="mt-6 text-gray-600 max-w-2xl mx-auto">لورم ایپسوم متن ساختگی با تولید سادگی و خوانایی، طراحی بخش‌های مختلف سایت با رویکرد حرفه‌ای.</p>
