--- a/about-us.html
+++ b/about-us.html
@@ -74,6 +74,18 @@
             transform: translateY(-5px);
             box-shadow: 0 6px 15px rgba(30, 64, 175, 0.2);
         }
+        .video-section {
+            padding: 40px 0;
+            background: linear-gradient(135deg, #f3f4f6, #e5e7eb);
+            text-align: center;
+        }
+        .video-section video {
+            max-width: 80%;
+            margin: 0 auto;
+            display: block;
+            border-radius: 10px;
+            box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
+        }
         .footer {
             background: linear-gradient(90deg, #1e40af, #60a5fa);
             padding: 2rem 0;
@@ -91,6 +103,9 @@
             .content-card {
                 padding: 15px;
             }
+            .video-section video {
+                max-width: 90%;
+            }
         }
         @media (max-width: 480px) {
             .section-title {
@@ -98,6 +113,9 @@
             }
             .content-card {
                 padding: 10px;
+            }
+            .video-section video {
+                max-width: 100%;
             }
         }
     </style>
@@ -154,6 +172,18 @@
                     </p>
                 </div>
             </div>
+        </div>
+    </section>
+
+    <!-- بخش ویدیو معرفی -->
+    <section class="video-section">
+        <div class="container mx-auto px-6 text-center">
+            <h2 class="section-title">ویدیو معرفی آتیه درخشان</h2>
+            <video height="240" controls>
+                <source src="https://persian20.cdn.asset.aparat.com/aparat-video/20795c4c8018ef58ba18211eadc46e6b61673685-480p.mp4?wmsAuthSign=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ0b2tlbiI6ImIwNmVjMjI1OTA5MGI2YzcxODZiMTZmMWQ3YmNkMjEyIiwiZXhwIjoxNzU5MjcyMzYyLCJpc3MiOiJTYWJhIElkZWEgR1NJRyJ9.Dheo3EogAW6bED5oYCHYUNcqdLrji7LHXIPBsJ1hDPE" type="video/mp4">
+                مرورگرت از ویدئو پشتیبانی نمی‌کنه. لطفاً لینک زیر رو امتحان کن: <a href="https://www.youtube.com/embed/SAMPLE_ID">لینک یوتیوب</a>
+            </video>
+            <p class="mt-4 text-gray-600 max-w-2xl mx-auto">این ویدیو نگاهی کلی به امکانات، اساتید و برنامه‌های آموزشی ما داره. برای اطلاعات بیشتر، با ما تماس بگیرید!</p>
         </div>
     </section>
 
