--- a/about-us.html
+++ b/about-us.html
@@ -124,30 +124,23 @@
     <!-- هدر و منوی ناوبری -->
     <nav class="navbar shadow-lg">
         <div class="container mx-auto px-4 py-4 flex justify-between items-center">
-            <a href="index.html" class="text-white text-3xl font-extrabold">آتیه درخشان</a>
+            <a href="../index.html" class="text-white text-3xl font-extrabold">آتیه درخشان</a>
             <div class="space-x-6 space-x-reverse flex items-center">
-                <a href="index.html" class="text-white hover:text-yellow-200 transition duration-300 text-lg">خانه</a>
-                <div class="dropdown">
-                    <span class="dropdown-toggle text-white hover:text-yellow-200 transition duration-300 text-lg cursor-pointer">درباره ما</span>
-                    <div class="dropdown-menu">
-                        <a href="about-us.html">معرفی آموزشگاه</a>
-                        <a href="history.html">تاریخچه</a>
-                        <a href="mission.html">مأموریت و چشم‌انداز</a>
-                    </div>
-                </div>
+                <a href="../index.html" class="text-white hover:text-yellow-200 transition duration-300 text-lg">خانه</a>
+                <a href="about-us.html" class="text-white hover:text-yellow-200 transition duration-300 text-lg">درباره ما</a>
                 <div class="dropdown">
                     <span class="dropdown-toggle text-white hover:text-yellow-200 transition duration-300 text-lg cursor-pointer">دوره‌ها</span>
                     <div class="dropdown-menu">
-                        <a href="math-course.html">ریاضی پیشرفته</a>
-                        <a href="science-course.html">علوم تجربی</a>
-                        <a href="english-course.html">زبان انگلیسی</a>
+                        <a href="../math-course.html">ریاضی پیشرفته</a>
+                        <a href="../science-course.html">علوم تجربی</a>
+                        <a href="../english-course.html">زبان انگلیسی</a>
                     </div>
                 </div>
                 <div class="dropdown">
                     <span class="dropdown-toggle text-white hover:text-yellow-200 transition duration-300 text-lg cursor-pointer">مدرسان</span>
                     <div class="dropdown-menu">
-                        <a href="teachers-list.html">لیست اساتید</a>
-                        <a href="teacher-profiles.html">پروفایل‌ها</a>
+                        <a href="../teachers-list.html">لیست اساتید</a>
+                        <a href="../teacher-profiles.html">پروفایل‌ها</a>
                     </div>
                 </div>
                 <a href="#contact" class="text-white hover:text-yellow-200 transition duration-300 text-lg">تماس با ما</a>
@@ -227,7 +220,7 @@
             <p class="text-md mb-2">سهند، فاز دو، نبش میدان معلم، مجتمع تجاری جواهر، طبقه دوم</p>
             <p class="text-md mb-4">تلفن: 09144277240 - 09394713666</p>
             <div class="flex justify-center gap-6">
-                <a href="index.html" class="text-white hover:text-yellow-200 transition duration-300">خانه</a>
+                <a href="../index.html" class="text-white hover:text-yellow-200 transition duration-300">خانه</a>
                 <a href="about-us.html" class="text-white hover:text-yellow-200 transition duration-300">درباره ما</a>
                 <a href="#contact" class="text-white hover:text-yellow-200 transition duration-300">تماس</a>
             </div>
