--- a/index.html
+++ b/index.html
@@ -337,14 +337,7 @@
             <a href="index.html" class="text-white text-3xl font-extrabold">آتیه درخشان</a>
             <div class="space-x-6 space-x-reverse flex items-center">
                 <a href="index.html" class="text-white hover:text-yellow-200 transition duration-300 text-lg">خانه</a>
-                <div class="dropdown">
-                    <span class="dropdown-toggle text-white hover:text-yellow-200 transition duration-300 text-lg cursor-pointer">درباره ما</span>
-                    <div class="dropdown-menu">
-                        <a href="about-us.html">معرفی آموزشگاه</a>
-                        <a href="history.html">تاریخچه</a>
-                        <a href="mission.html">مأموریت و چشم‌انداز</a>
-                    </div>
-                </div>
+                <a href="درباره ما/about-us.html" class="text-white hover:text-yellow-200 transition duration-300 text-lg">درباره ما</a>
                 <div class="dropdown">
                     <span class="dropdown-toggle text-white hover:text-yellow-200 transition duration-300 text-lg cursor-pointer">دوره‌ها</span>
                     <div class="dropdown-menu">
@@ -395,7 +388,7 @@
         <p class="text-lg text-gray-700 mb-6 max-w-3xl mx-auto leading-relaxed">
             آموزشگاه آتیه درخشان با هدف ارتقاء سطح علمی دانش‌آموزان و ارائه آموزش‌های باکیفیت تأسیس شده است. ما با تیمی حرفه‌ای، روش‌های نوین تدریس و امکانات پیشرفته، بهترین تجربه یادگیری را به شما ارائه می‌دهیم.
         </p>
-        <a href="#" class="btn-primary">بیشتر بدانید</a>
+        <a href="درباره ما/about-us.html" class="btn-primary">بیشتر بدانید</a>
     </section>
 
     <!-- بخش منابع آموزشی و ابزارها -->
@@ -477,9 +470,10 @@
             <p class="text-md mb-2">سهند، فاز دو، نبش میدان معلم، مجتمع تجاری جواهر، طبقه دوم</p>
             <p class="text-md mb-4">تلفن: 09144277240 - 09394713666</p>
             <div class="flex justify-center gap-6">
+                <a href="index.html" class="text-white hover:text-yellow-200 transition duration-300">خانه</a>
+                <a href="درباره ما/about-us.html" class="text-white hover:text-yellow-200 transition duration-300">درباره ما</a>
                 <a href="#contact" class="text-white hover:text-yellow-200 transition duration-300">تماس</a>
                 <a href="#blog" class="text-white hover:text-yellow-200 transition duration-300">وبلاگ</a>
-                <a href="#" class="text-white hover:text-yellow-200 transition duration-300">شبکه‌های اجتماعی</a>
             </div>
             <p class="mt-6 text-sm">© 1404 آموزشگاه آتیه درخشان - تمامی حقوق محفوظ است</p>
         </div>
