--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@
             <a href="index.html" class="text-white text-3xl font-extrabold">آتیه درخشان</a>
             <div class="space-x-6 space-x-reverse flex items-center">
                 <a href="index.html" class="text-white hover:text-yellow-200 transition duration-300 text-lg">خانه</a>
-                <a href="درباره ما/about-us.html" class="text-white hover:text-yellow-200 transition duration-300 text-lg">درباره ما</a>
+                <a href="about-us.html" class="text-white hover:text-yellow-200 transition duration-300 text-lg">درباره ما</a>
                 <div class="dropdown">
                     <span class="dropdown-toggle text-white hover:text-yellow-200 transition duration-300 text-lg cursor-pointer">دوره‌ها</span>
                     <div class="dropdown-menu">
@@ -388,7 +388,7 @@
         <p class="text-lg text-gray-700 mb-6 max-w-3xl mx-auto leading-relaxed">
             آموزشگاه آتیه درخشان با هدف ارتقاء سطح علمی دانش‌آموزان و ارائه آموزش‌های باکیفیت تأسیس شده است. ما با تیمی حرفه‌ای، روش‌های نوین تدریس و امکانات پیشرفته، بهترین تجربه یادگیری را به شما ارائه می‌دهیم.
         </p>
-        <a href="درباره ما/about-us.html" class="btn-primary">بیشتر بدانید</a>
+        <a href="about-us.html" class="btn-primary">بیشتر بدانید</a>
     </section>
 
     <!-- بخش منابع آموزشی و ابزارها -->
@@ -471,7 +471,7 @@
             <p class="text-md mb-4">تلفن: 09144277240 - 09394713666</p>
             <div class="flex justify-center gap-6">
                 <a href="index.html" class="text-white hover:text-yellow-200 transition duration-300">خانه</a>
-                <a href="درباره ما/about-us.html" class="text-white hover:text-yellow-200 transition duration-300">درباره ما</a>
+                <a href="about-us.html" class="text-white hover:text-yellow-200 transition duration-300">درباره ما</a>
                 <a href="#contact" class="text-white hover:text-yellow-200 transition duration-300">تماس</a>
                 <a href="#blog" class="text-white hover:text-yellow-200 transition duration-300">وبلاگ</a>
             </div>
