--- a/courses.html
+++ b/courses.html
@@ -199,7 +199,7 @@
                     <h3>دوره علوم تجربی</h3>
                     <p>یادگیری جامع زیست، شیمی و فیزیک با روش‌های تعاملی و آزمایشگاهی. مناسب برای دانش‌آموزانی که به دنبال تسلط کامل بر علوم هستند.</p>
                     <a href="#register" class="btn-register inline-block">ثبت‌نام</a>
-                    <a href="https://www.youtube.com/watch?v=example_science" target="_blank" class="btn-video inline-block">ویدیو آموزشی</a>
+                    <a href="https://persian17.cdn.asset.aparat.com/aparat-video/2e94c273af23ebc8b8f8b5d986c91f9061302410-480p.mp4?wmsAuthSign=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ0b2tlbiI6IjkxYmUxMTkyMTNjODAxYzM5YjI2NzZhMmI5ZDMwZWFkIiwiZXhwIjoxNzU5Mjc2NTIzLCJpc3MiOiJTYWJhIElkZWEgR1NJRyJ9.Sj5lDDI5pBGhoeI9n9NlUhFE7lJPxhfHd-fVuGemvoI">ویدیو آموزشی</a>
                 </div>
                 <div class="course-card">
                     <h3>دوره زبان انگلیسی</h3>
