--- a/about-us.html
+++ b/about-us.html
@@ -131,9 +131,12 @@
                 <div class="dropdown">
                     <span class="dropdown-toggle text-white hover:text-yellow-200 transition duration-300 text-lg cursor-pointer">دوره‌ها</span>
                     <div class="dropdown-menu">
-                        <a href="math-course.html">ریاضی پیشرفته</a>
-                        <a href="science-course.html">علوم تجربی</a>
-                        <a href="english-course.html">زبان انگلیسی</a>
+                        <a href="courses.html">ریاضی پیشرفته</a>
+                        <a href="courses.html">علوم تجربی</a>
+                        <a href="courses.html">زبان انگلیسی</a>
+                        <a href="courses.html">فیزیک</a>
+                        <a href="courses.html">شیمی</a>
+                        <a href="courses.html">تیزهوشان</a>
                     </div>
                 </div>
                 <div class="dropdown">
@@ -222,7 +225,9 @@
             <div class="flex justify-center gap-6">
                 <a href="index.html" class="text-white hover:text-yellow-200 transition duration-300">خانه</a>
                 <a href="about-us.html" class="text-white hover:text-yellow-200 transition duration-300">درباره ما</a>
+                <a href="courses.html" class="text-white hover:text-yellow-200 transition duration-300">دوره‌ها</a>
                 <a href="#contact" class="text-white hover:text-yellow-200 transition duration-300">تماس</a>
+                <a href="#blog" class="text-white hover:text-yellow-200 transition duration-300">وبلاگ</a>
             </div>
             <p class="mt-6 text-sm">© 1404 آموزشگاه آتیه درخشان - تمامی حقوق محفوظ است</p>
         </div>
