--- a/courses.html
+++ b/courses.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>دوره‌ها - آتیه درخشان</title>
+    <title>دوره‌های آموزشی آتیه درخشان</title>
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
     <style>
@@ -17,6 +17,9 @@
             margin: 0;
             padding: 0;
             overflow-x: hidden;
+        }
+        html {
+            scroll-behavior: smooth;
         }
         .navbar {
             background: linear-gradient(90deg, #1e40af, #60a5fa);
@@ -57,56 +60,70 @@
             background: #3b82f6;
         }
         .section-title {
-            text-align: center;
             font-size: 2.5rem;
+            font-weight: 800;
+            text-align: center;
             color: #1e40af;
-            margin: 2rem 0;
-            font-weight: 900;
+            margin-bottom: 2rem;
+            text-shadow: 0 0 10px rgba(59, 130, 246, 0.3);
         }
         .course-card {
-            background: #ffffff;
+            background: linear-gradient(145deg, #ffffff, #f3e8ff);
             border-radius: 12px;
             padding: 20px;
             box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
-            transition: transform 0.3s ease, box-shadow 0.3s ease;
-            margin-bottom: 20px;
+            transition: all 0.4s ease;
+            border: 2px solid #7e22ce;
         }
         .course-card:hover {
-            transform: translateY(-5px);
-            box-shadow: 0 6px 15px rgba(30, 64, 175, 0.2);
+            transform: translateY(-10px);
+            box-shadow: 0 12px 25px rgba(126, 34, 206, 0.3);
+            border-color: #a855f7;
         }
         .course-card h3 {
-            color: #6b21a8;
             font-size: 1.5rem;
+            color: #6b21a8;
+            margin-bottom: 1rem;
             font-weight: 700;
-            margin-bottom: 10px;
         }
         .course-card p {
             color: #4b5563;
-            font-size: 1rem;
             line-height: 1.6;
-            margin-bottom: 15px;
+            margin-bottom: 1.5rem;
+            text-align: justify;
         }
         .btn-register, .btn-video {
+            padding: 10px 20px;
+            border-radius: 50px;
+            font-weight: 600;
+            transition: all 0.3s ease;
+            margin-left: 10px;
+            text-align: center;
+        }
+        .btn-register {
             background: linear-gradient(90deg, #3b82f6, #1e40af);
             color: #fff;
-            padding: 8px 20px;
-            border-radius: 50px;
-            transition: all 0.4s ease;
-            text-decoration: none;
-            display: inline-block;
-            margin-right: 10px;
+            border: 2px solid #fff;
         }
-        .btn-register:hover, .btn-video:hover {
+        .btn-register:hover {
             background: linear-gradient(90deg, #1e40af, #3b82f6);
-            transform: scale(1.05);
-            box-shadow: 0 0 10px rgba(59, 130, 246, 0.5);
+            transform: scale(1.1);
+            box-shadow: 0 0 15px rgba(59, 130, 246, 0.5);
+        }
+        .btn-video {
+            background: linear-gradient(90deg, #7e22ce, #a855f7);
+            color: #fff;
+            border: 2px solid #fff;
+        }
+        .btn-video:hover {
+            background: linear-gradient(90deg, #a855f7, #7e22ce);
+            transform: scale(1.1);
+            box-shadow: 0 0 15px rgba(126, 34, 206, 0.5);
         }
         .footer {
             background: linear-gradient(90deg, #1e40af, #60a5fa);
             padding: 2rem 0;
             color: #fff;
-            margin-top: 2rem;
         }
         @keyframes fadeIn {
             from { opacity: 0; }
@@ -125,29 +142,19 @@
             .course-card p {
                 font-size: 0.9rem;
             }
-            .grid {
-                grid-template-columns: 1fr 1fr;
-            }
         }
         @media (max-width: 480px) {
             .section-title {
                 font-size: 1.8rem;
             }
             .course-card {
-                padding: 10px;
+                padding: 12px;
             }
             .course-card h3 {
                 font-size: 1.2rem;
             }
             .course-card p {
                 font-size: 0.85rem;
-            }
-            .btn-register, .btn-video {
-                padding: 6px 15px;
-                font-size: 0.9rem;
-            }
-            .grid {
-                grid-template-columns: 1fr;
             }
         }
     </style>
@@ -161,18 +168,18 @@
                 <a href="index.html" class="text-white hover:text-yellow-200 transition duration-300 text-lg">خانه</a>
                 <a href="about-us.html" class="text-white hover:text-yellow-200 transition duration-300 text-lg">درباره ما</a>
                 <div class="dropdown">
-                    <span class="dropdown-toggle text-white hover:text-yellow-200 transition duration-300 text-lg cursor-pointer">دوره‌ها</span>
+                    <a href="courses.html" class="dropdown-toggle text-white hover:text-yellow-200 transition duration-300 text-lg cursor-pointer" aria-label="مشاهده دوره‌های آموزشی">دوره‌ها</a>
                     <div class="dropdown-menu">
-                        <a href="courses.html">ریاضی پیشرفته</a>
-                        <a href="courses.html">علوم تجربی</a>
-                        <a href="courses.html">زبان انگلیسی</a>
-                        <a href="courses.html">فیزیک</a>
-                        <a href="courses.html">شیمی</a>
-                        <a href="courses.html">تیزهوشان</a>
+                        <a href="#math">ریاضی پیشرفته</a>
+                        <a href="#science">علوم تجربی</a>
+                        <a href="#english">زبان انگلیسی</a>
+                        <a href="#physics">فیزیک</a>
+                        <a href="#chemistry">شیمی</a>
+                        <a href="#tizhooshan">تیزهوشان</a>
                     </div>
                 </div>
                 <div class="dropdown">
-                    <span class="dropdown-toggle text-white hover:text-yellow-200 transition duration-300 text-lg cursor-pointer">مدرسان</span>
+                    <span class="dropdown-toggle text-white hover:text-yellow-200 transition duration-300 text-lg cursor-pointer" aria-label="مشاهده اطلاعات مدرسان">مدرسان</span>
                     <div class="dropdown-menu">
                         <a href="teachers-list.html">لیست اساتید</a>
                         <a href="teacher-profiles.html">پروفایل‌ها</a>
@@ -189,37 +196,37 @@
         <div class="container mx-auto px-6">
             <h2 class="section-title">دوره‌های آموزشی آتیه درخشان</h2>
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
-                <div class="course-card">
+                <div class="course-card" id="math">
                     <h3>دوره ریاضی پیشرفته</h3>
                     <p>این دوره با تمرکز بر مفاهیم عمیق ریاضی و حل مسائل پیشرفته، شما را برای کنکور و المپیادها آماده می‌کند. شامل تمرین‌های عملی و آموزش توسط اساتید مجرب.</p>
                     <a href="#register" class="btn-register inline-block">ثبت‌نام</a>
                     <a href="https://www.youtube.com/watch?v=example_math" target="_blank" class="btn-video inline-block">ویدیو آموزشی</a>
                 </div>
-                <div class="course-card">
+                <div class="course-card" id="science">
                     <h3>دوره علوم تجربی</h3>
                     <p>یادگیری جامع زیست، شیمی و فیزیک با روش‌های تعاملی و آزمایشگاهی. مناسب برای دانش‌آموزانی که به دنبال تسلط کامل بر علوم هستند.</p>
                     <a href="#register" class="btn-register inline-block">ثبت‌نام</a>
                     <a href="https://www.youtube.com/watch?v=example_science" target="_blank" class="btn-video inline-block">ویدیو آموزشی</a>
                 </div>
-                <div class="course-card">
+                <div class="course-card" id="english">
                     <h3>دوره زبان انگلیسی</h3>
                     <p>دوره‌ای برای تقویت مهارت‌های چهارگانه زبان با تمرکز بر گرامر، واژگان و مکالمه. مناسب برای کنکور و مهاجرت.</p>
                     <a href="#register" class="btn-register inline-block">ثبت‌نام</a>
                     <a href="https://www.youtube.com/watch?v=example_english" target="_blank" class="btn-video inline-block">ویدیو آموزشی</a>
                 </div>
-                <div class="course-card">
+                <div class="course-card" id="physics">
                     <h3>دوره فیزیک</h3>
                     <p>دوره‌ای تخصصی برای تسلط بر مفاهیم فیزیک با تمرکز بر حل مسائل عملی و آمادگی برای کنکور و المپیاد.</p>
                     <a href="#register" class="btn-register inline-block">ثبت‌نام</a>
                     <a href="https://www.youtube.com/watch?v=example_physics" target="_blank" class="btn-video inline-block">ویدیو آموزشی</a>
                 </div>
-                <div class="course-card">
+                <div class="course-card" id="chemistry">
                     <h3>دوره شیمی</h3>
                     <p>یادگیری عمیق مفاهیم شیمی با آزمایش‌های عملی و آموزش‌های پیشرفته برای موفقیت در کنکور و تحصیلات تکمیلی.</p>
                     <a href="#register" class="btn-register inline-block">ثبت‌نام</a>
                     <a href="https://www.youtube.com/watch?v=example_chemistry" target="_blank" class="btn-video inline-block">ویدیو آموزشی</a>
                 </div>
-                <div class="course-card">
+                <div class="course-card" id="tizhooshan">
                     <h3>دوره تیزهوشان</h3>
                     <p>دوره‌ای ویژه برای دانش‌آموزان تیزهوش با تمرکز بر پرورش خلاقیت و آمادگی برای آزمون‌های تیزهوشان.</p>
                     <a href="#register" class="btn-register inline-block">ثبت‌نام</a>
@@ -245,5 +252,32 @@
             <p class="mt-6 text-sm">© 1404 آموزشگاه آتیه درخشان - تمامی حقوق محفوظ است</p>
         </div>
     </footer>
+
+    <!-- اسکریپت‌ها -->
+    <script>
+        // Mobile-friendly dropdown toggle
+        document.querySelectorAll('.dropdown-toggle').forEach(dropdown => {
+            dropdown.addEventListener('click', (e) => {
+                const dropdownMenu = dropdown.nextElementSibling;
+                const isVisible = dropdownMenu.style.display === 'block';
+                document.querySelectorAll('.dropdown-menu').forEach(menu => {
+                    menu.style.display = 'none';
+                });
+                if (dropdown.tagName !== 'A' || (dropdown.tagName === 'A' && e.target.closest('.dropdown-menu') === null)) {
+                    dropdownMenu.style.display = isVisible ? 'none' : 'block';
+                }
+                e.stopPropagation();
+            });
+        });
+
+        // Close dropdowns when clicking outside
+        document.addEventListener('click', (e) => {
+            if (!e.target.closest('.dropdown')) {
+                document.querySelectorAll('.dropdown-menu').forEach(menu => {
+                    menu.style.display = 'none';
+                });
+            }
+        });
+    </script>
 </body>
 </html>
